--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				  </button>
-				  <a class="navbar-brand" href="#">AppName</a>
+				  <a class="navbar-brand" href="#">P.A.S</a>
 				</div>
 			  </ul>
 			</div><!-- /.navbar-collapse -->
